# federated-survival-analysis-experiments

./: README.md  federated_survival_analysis.ipynb
auton-federated-survival-analysis/: demo.py  pyproject.toml
auton-federated-survival-analysis/auton_survival/models/cph/: __init__.py
federated-survival-starter/: pyproject.toml  requirements.txt
federated-survival-tutorial/: 00_survival_analysis_demo.ipynb  02_pycox_deep_cox_demo.ipynb  README.md  pyproject.toml
federated-survival-tutorial/DeepSurv/: deepsurv.py  loss.py
media/: suggestions-from-chatgpt.md
pycox-federated-survival-analysis/: centralised_coxph.py  pyproject.toml  weight_checkpoint_2023-5-19_1-17-8_RbPMshfElEn2qNIVKdDV.pt
tutorials/: flower_intro_pytorch.ipynb
