[tool.poetry]
name = "auton-federated-survival-analysis"
version = "0.1.0"
description = ""
authors = ["Matteo Fordiani <matteofordiani@gmail.com>"]
readme = "README.md"
packages = [{include = "auton_federated_survival_analysis"}]

[tool.poetry.dependencies]
python = "~3.9"
torch = "~1"
numpy = "~1"
pandas = "~1"
tqdm = "~4"
scikit-learn = "~1"
torchvision = "~0"
scikit-survival = "~0"
lifelines = "~0.26"

[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"