[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matteo Fordiani", email = "matteofordiani@gmail.com"},
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "scikit-survival>=0.20.0",
    "matplotlib>=3.7.1",
    "optuna>=3.1.1",
    "pycox>=0.2.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}
