[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matteo Fordiani", email = "matteofordiani@gmail.com"},
]
dependencies = [
    "pycox>=0.2.3",
    "optuna>=3.1.1",
    "scikit-survival>=0.20.0",
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "flwr>=1.3.0",
    "ipykernel>=6.22.0",
    "sklearn-pandas>=2.2.0",
    "pandas==1.5",
]
requires-python = ">=3.8"
license = {text = "MIT"}
